# scoomatic-hoverboard

./: .gitignore  .gitmodules  30mm Hole.dxf  README.md
Markdown/: cheatsheet.md  index.md
cad/: 30mm Hole.dxf
cad/f360/: RPI PSU Bracket v1.f3d  RPLIDAR Bracket v5.f3d  Scoomatic Spacer v2.f3d  Sonar Bracket v2.f3d  Sonar_bracket_alignment_thingy v7.f3d  Switch Bracket v2.f3d
cad/inventor/MotorController/: MotorController.ipj  Riegel1.ipt  deckel.ipt  gehaeuse_bg.iam  gehause.3mf  gehause.ipt  totmannschalter.3mf  (+3 more)
cad/schematics/: sonar-pcb.json
cad/stl/: BackPlate.stl  Charger Bracket v2.stl  Joystick mount v1.stl  RPLIDAR Bracket v5.stl  Riegel1.stl  Scoomatic Spacer v1.stl  Sonar Bracket v1.stl  Switch Bracket v2.stl  Wlan-antennen-halter.stl  deckel.stl  fuss.stl  gehause.stl  itemMount.stl  jetson_deckel.stl  klammern_usbc_hub.stl  rpi2-top.STL  totmannschalter_deckel.stl  totmannschalter_grundplatte.stl
code/: get_speed.py  learn_gamepad_btn.py
code/ROS-Drivers/scoomatic_drivers/: package.xml  params.yaml  readgpssensor.py  setup.cfg  setup.py  start_ros2.bash
code/ROS-Drivers/scoomatic_drivers/config/: params.yaml
code/ROS-Drivers/scoomatic_drivers/launch/: simple.launch.py
code/ROS-Drivers/scoomatic_drivers/scoomatic_drivers/: demo_params.yaml  gamepad_driver.py  gps_driver.py  joy_driver.py  motor_diag.py  motor_driver.py  params.yaml  sonar_driver.py  test.py
code/configuration/: 10-local.rules  amcl.rviz  mapping-and-odometry.rviz  navigation.rviz  odometry-and-map.rviz  ssh-config
code/hoverboard-firmware/: config.h  hover.hex
code/ros-drivers/ros-realsense-src/realsense_scoomatic/: CMakeLists.txt  package.xml  setup.cfg  setup.py
code/ros-drivers/ros-realsense-src/realsense_scoomatic/launch/: start_realsense.launch.py
code/ros-drivers/scoomatic_core_src/scoomatic_ros2/: package.xml  setup.cfg  setup.py
code/ros-drivers/scoomatic_core_src/scoomatic_ros2/launch/: start_gamepad_driver.launch.py  start_gamepad_safety.launch .py  start_scoomatic.launch.py
code/ros-drivers/scoomatic_core_src/scoomatic_ros2/scoomatic_ros2/: gamepad_driver.py  gamepad_safety.py  motor_controller.py  odom_publisher.py
code/ros-drivers/scoomatic_drive/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
code/ros-drivers/scoomatic_drive/launch/: amcl.launch  geotiff_mapper.launch  hector_geotiff_mapper.launch  hector_mapping.launch  hector_slam.launch  start_hector_slam.launch  start_navigation.launch
docker/nav2/: build.sh  docker-compose.yaml  run.sh
docker/realsense/: build.sh  docker-compose.yaml
docker/scoomatic_base/: build.sh  docker-compose.yaml
docs/: access_data.md
docs/Bachelormodul-HC/: ROS-README.md  index.md  notes.md
docs/bachelor-hc/: Documentation.md  README.md  index.md
docs/projektmodul/: index.md
docs/projektmodul-mk/: README.md
docs/seminar/: index.md
docs/seminar-ms/: index.md
documentation/: .~lock.Abschlusspräsentation.pptx#  cheatsheet.md  einkaufsliste.ods  index.md
documentation/projektmodul/: index.md  index.md.head2
documentation/seminar/: index.md
einkauf/: einkaufsliste.ods  rexeroth-warenkorb.htm
einkauf/rexeroth-warenkorb-Dateien/: CAManagerScript.js  DispatchPortal-Start.htm  EmptyDocument.htm  FrameworkSupport.js  HeaderlessSupport.js  HistoryFramework.js  JSUtils.js  NavigationFramework.js  OBN.js  controls_nn6.js  emptyhover.htm  helpCenterPlugin.js  js13_epcf.js  lightHeader.css  light_navpanel.js  light_workArea.js  lsapi.js  nn7.css  nn7_002.css  nn7_003.css  nn7_004.css  nn7_005.css  pagesupport.js  popupCmn.js  popupStyles.css  popup_nn7.js  sapUrMapi_nn7.js  sessionPlugin.js  urMessageBundle_de.js
maps/: buero.yaml  map-0.0.1.yaml  map-alpha1.yaml  map-alpha2.yaml  map-alpha3.yaml  map-alpha4.yaml  map-alpha5.yaml  map-bad-example.yaml  map-buero2.yaml
(+176 files in other folders)
