<?xml version="1.0"?>
<package format="2">
  <name>scoomatic_drive</name>
  <version>0.0.1</version>
  <description>Provides capabilities to create a map via SLAM. Also nearfield obstacle recognition and avoidance. 
  Requires sensor values from LaserScan.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="henri.chilla@student.uni-augsburg.de">Henri Chilla</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="henri.chilla@student.uni-augsburg.de">Henri Chilla</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_slam</build_depend>
  <build_export_depend>hector_slam</build_export_depend>
  <exec_depend>hector_slam</exec_depend>

</package>
