<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scoomatic_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="markus@todo.todo">markus</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <build_depend>python-transforms3d-pip</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3-serial</build_depend>
  <build_depend>python-inputs-pip</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>python3-serial</exec_depend> 
  <exec_depend>python-inputs-pip</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
